--- a/src/views/appointments/calendar.ejs
+++ b/src/views/appointments/calendar.ejs
@@ -3,9 +3,7 @@
 <div class="container-fluid">
   <div class="d-flex justify-content-between align-items-center mb-4">
     <h1 class="h3">Appointment Calendar</h1>
-    <a href="/appointments/view/create" class="btn btn-primary">
-      <i class="fas fa-plus"></i> Add Appointment
-    </a>
+    <a href="/appointments/create" class="btn btn-primary">Create New Appointment</a>
   </div>
   
   <div class="row">
